feat: allow users in a group to see the group
